--- a/slnMVC5Course/Vidly.Web/Views/Rentals/New.cshtml
+++ b/slnMVC5Course/Vidly.Web/Views/Rentals/New.cshtml
@@ -3,7 +3,7 @@
 }
 
 <h2>New Rental Form</h2>
-<form>
+<form id="newRental">
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
@@ -12,15 +12,28 @@
     </div>
     <div class="form-group">
         <label>Movie</label>
-        <input type="text" value="" class="form-control" />
+        <div class="tt-container">
+            <input id="movie" name="movie" data-rule-atLeastOneMovie="true" type="text" value="" class="form-control" />
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 col-sm-4">
+            <ul id="movies" class="list-group"></ul>
+        </div>
     </div>
     <button class="btn btn-primary">Submit</button>
 </form>
 @section scripts
 {
+    @Scripts.Render("~/bundles/jqueryval")
     <script>
         $(document).ready(function () {
-            var vm = {};
+
+
+            var vm = {
+                movieIds: []
+            };
             var customers = new Bloodhound({
                 datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
                 queryTokenizer: Bloodhound.tokenizers.whitespace,
@@ -41,6 +54,7 @@
                     vm.customerId = customer.id;
                 });
 
+           
 
             var movies = new Bloodhound({
                 datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
@@ -51,16 +65,68 @@
                 }
             });
 
-            $('#customer').typeahead({
+            $('#movie').typeahead({
                 minLength: 3,
                 highlight: true
             }, {
-                    name: 'customers',
+                    name: 'movies',
                     display: 'name',
-                    source: customers
-                }).on("typeahead:select", function (e, customer) {
-                    vm.customerId = customer.id;
+                    source: movies
+                }).on("typeahead:select", function (e, movie) {
+                    $("#movies").append("<li class='list-group-item'>" + movie.name + "</li>");
+
+                    $("#movie").typeahead("val", "");
+
+                    vm.movieIds.push(movie.id);
                 });
+            $.validator.addMethod("validCustomer", function () {
+                return vm.customerId && vm.customerId !== 0;
+            }, "Please select a valid customer.");
+
+            $.validator.addMethod("atLeastOneMovie", function () {
+                return vm.movieIds.length > 0;
+            }, "Please select at least one movie.");
+
+            var validator = $("#newRental").validate({
+                submitHandler: function () {
+                    $.ajax({
+                        url: "/api/newRentals",
+                        method: "post",
+                        data: vm
+                    })
+                        .done(function () {
+                            toastr.success("Rentals successfully recorded.");
+
+                            $("#customer").typeahead("val", "");
+                            $("#movie").typeahead("val", "");
+                            $("#movies").empty();
+
+                            vm = { movieIds: [] };
+
+                            validator.resetForm();
+                        })
+                        .fail(function () {
+                            toastr.error("Something unexpected happened.");
+                        });
+
+                    return false;
+                }
+            });
+            //$("#newRental").submit(function (e) {
+            //    e.preventDefault();
+            //    $.ajax({
+            //        url: "/api/newRentals",
+            //        method: "POST",
+            //        data: vm
+            //    })
+            //    .done(function () {
+            //        toastr.success("Filmes pedidos com sucesso!");
+            //    })
+            //    .fail(function () {
+            //        toastr.error("Erro ao realizar pedido!");
+            //    });  
+            //});
+
         });
 
     </script>    
